--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,14 @@
 {% extends 'home/base.html' %}
 
+{% block head %}
+    <script type="text/javascript" async
+      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+        </script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
+{% endblock %}
+
 {% block topbar %}
     <a class="nav-bar-text" href="{% url 'post_new' %}">
         Create new post
@@ -26,8 +35,8 @@
             </div>
             <div class="col-md-7">
                 {% autoescape off %} {{ post.text|linebreaksbr }} {% endautoescape %}
-            </div><!-- 
-            <div class="col-sm-2 text-sm-left blog_post_info">
+            </div>
+            <!-- <div class="col-sm-2 text-sm-left blog_post_info">
             </div> -->
         </article>
 
