--- a/blog/templates/blog/post_specific.html
+++ b/blog/templates/blog/post_specific.html
@@ -1,5 +1,14 @@
 {% extends 'home/base.html' %}
 
+{% block head %}
+    <script type="text/javascript" async
+      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+        </script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
+{% endblock %}
+
 {% block content %}
     <h1 class="title text-center">
     {{ post.title }}
